# mlidk

./: .gitignore  CMakeLists.txt  Dockerfile  Grammar.md  README.md  build.sh
.github/workflows/: cmake.yml
examples/: def_expr.lettuce  factorial.lettuce  func_call.lettuce  func_lit.lettuce  hello.lettuce  if_func_lit.lettuce  ifs.lettuce  nested.lettuce  print.lettuce  sub_and_div.lettuce
include/: AST.fwd.hpp  AST.hpp  ASTPrinter.hpp  ASTVisitor.hpp  CMakeLists.txt  MLIR_gen.hpp  lexer.hpp  parser.hpp  passes.hpp  type_checker.hpp  types.hpp
include/Romaine/: CMakeLists.txt  RomaineDialect.h  RomaineDialect.td  RomaineOps.h  RomaineOps.td
lettucec/: AST.cpp  ASTPrinter.cpp  CMakeLists.txt  MLIR_gen.cpp  lettucec.cpp  lexer.cpp  mlidk.cpp  parser.cpp  passes.cpp  type_checker.cpp  types.cpp
lib/: CMakeLists.txt
lib/Romaine/: CMakeLists.txt  RomaineDialect.cpp  RomaineOps.cpp
src/: AST.cpp  CMakeLists.txt  lexer.cpp  mlidk.cpp  parser.cpp
src/include/: AST.fwd.hpp  AST.hpp  ASTPrinter.hpp  ASTVisitor.hpp  lexer.hpp
src/include/mlidk/: Dialect.h
src/mlidk/: Dialect.cpp
unittests/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp
web/: Makefile  main.py
web/backend/: index.js  package.json
web/frontend/: Makefile  editor.mjs  index.html  package-lock.json  package.json  rollup.config.mjs  styles.css
